# KitEngine_OLD

./: .gitignore  .gitmodules  CMakeLists.txt  Changes  build.yaml  install_dependenties.bat  main.cpp  post_build.py  postbuild.py  requirements.txt  vcpkg.json
KitEngine/: CMakeLists.txt
KitEngine/Utils/: CMakeLists.txt
KitEngine/Utils/kitModelLoader/: CMakeLists.txt
KitEngine/Utils/kitModelLoader/include/: Loader.h  kitMaterial.h  kitMesh.h  kitTexture.h  kitVertex.h  pch.h
KitEngine/Utils/kitModelLoader/src/: Loader.cpp  kitMaterial.cpp  kitTexture.cpp  kitVertex.cpp  pch.cpp
KitEngine/include/: KitEnginePch.h  Window.h
KitEngine/include/Core/: Application.h  BaseCamera.h  BaseLayer.h  ImGuiLayer.h  Input.h  LayerStack.h  Logger.h  Window.h
KitEngine/include/Graphics/: GLTypeSize.h  GlHelpers.h  IndexBuffer.h  MeshEntry.h  Renderer.h  Shader.h  Texture.h  Vertex.h  VertexArray.h  VertexBuffer.h  VertexBufferAttribute.h  VertexBufferLayout.h
KitEngine/include/Graphics/Components/: ModelComponent.h
KitEngine/res/shaders/glsl/: basic.glsl
KitEngine/src/: Window.cpp
KitEngine/src/Core/: Application.cpp  BaseCamera.cpp  BaseLayer.cpp  ImGuiLayer.cpp  Input.cpp  LayerStack.cpp  Window.cpp
KitEngine/src/Graphics/: IndexBuffer.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  Vertex.cpp  VertexArray.cpp  VertexBuffer.cpp  VertexBufferLayout.cpp
KitEngine/src/Graphics/Components/: ModelComponent.cpp
Resources/: CMakeLists.txt  test.kmf
Source/Core/: CMakeLists.txt  SoundCore.h
Source/Core/include/: AABB.h  Application.h  BaseCamera.h  BaseEntity.h  BaseLayer.h  CameraSystem.h  Components.h  Cursor3D.h  Entity.h  FPSCameraSystem.h  FrameBuffer.h  GameLevel.h  GameObject.h  Geometry.h  IResource.h  ISystem.h  IndexBuffer.h  Input.h  KitComponent.h  KitCore.h  KitLight.h  KitMaterial.h  KitMaterialFile.h  KitMesh.h  KitModel.h  KitModelFile.h  KitObject.h  KitScene.h  KitStaticMesh.h  KitVertex.h  LayerStack.h  Logger.h  LuaClassRegistrationSystem.h  MaterialComponent.h  MathHelper.h  Mesh.h  MeshComponent.cpp  MeshComponent.h  MeshVisualImporter.h  Model.h  (+31 more)
Source/Core/include/Events/: Event.h  FrameBufferResizeEvent.h  WindowCloseEvent.h  WindowResizeEvent.h
Source/Core/include/Interfaces/: IDeserialization.h  IRenderable.h  ISerialization.h
Source/Core/include/Physics/: GLDebugDrawer.h  GLMotionState.h  PhysicObject.h  RigidBody.cpp  RigidBody.h
Source/Core/include/Primitives/: Line.h  Plane.h
Source/Core/source/: Application.cpp  BaseCamera.cpp  BaseEntity.cpp  BaseLayer.cpp  CameraSystem.cpp  Cursor3D.cpp  Entity.cpp  FPSCameraSystem.cpp  FrameBuffer.cpp  GameLevel.cpp  GameObject.cpp  Helpers.cpp  IndexBuffer.cpp  Input.cpp  KitComponent.cpp  KitLight.cpp  KitMaterial.cpp  KitMaterialFile.cpp  KitMesh.cpp  KitModel.cpp  KitModelFile.cpp  KitObject.cpp  KitScene.cpp  KitStaticMesh.cpp  KitTag.cpp  KitTexture.cpp  KitTransform.cpp  KitVertex.cpp  LayerStack.cpp  LuaClassRegistrationSystem.cpp  Mesh.cpp  MeshVisualImporter.cpp  Model.cpp  ObjectList.cpp  PhysicDebugSystem.cpp  PhysicSystem.cpp  Physics.cpp  PlayerControllerSystem.cpp  RenderBackend.cpp  RenderDebug.cpp  (+20 more)
Source/Core/source/Physics/: GLDebugDrawer.cpp  PhysicObject.cpp
Source/Core/source/Primitives/: Line.cpp
Source/Editors/LevelEditor/: CMakeLists.txt  ImGuiLayer.cpp  ImGuiLayer.h  InfinityGrid.h  main.cpp
Source/Editors/LevelEditor/Core/: EditorCamera.cpp  EditorCamera.h  IController.h  ImGuiLayer.cpp  ImGuiLayer.h  KitUI.h
Source/Editors/LevelEditor/Core/Events/: Event.h  SelectGizmoEvent.h
Source/Editors/LevelEditor/Tools/: ModelImportTool.cpp  ModelImportTool.h
Source/Editors/LevelEditor/UI/: BottomMenuBar.cpp  Inspector.cpp  Inspector.h  KitUI.h  ToolsTab.cpp  UIBottomMenuBar.cpp  UIBottomMenuBar.h  UIContentBrowser.cpp  UIContentBrowser.h  UIController.cpp  UIController.h  UIFileDialog.cpp  UIFileDialog.h  UIInspector.cpp  UIInspector.h  UILayer.cpp  UILayer.h  UISaveClose.cpp  UISaveClose.h  UISceneTree.cpp  UISceneTree.h  UIToolsTab.cpp  UIToolsTab.h  UITopBarTools.cpp  UITopBarTools.h  UITopMainMenu.cpp  UITopMainMenu.h  UIViewport.cpp  UIViewport.h
Source/Editors/LevelEditor/include/: ImGuiLayer.h
Source/Editors/LevelEditor/include/Tests/: TestLayer.h
Source/Editors/LevelEditor/source/: ImGuiLayer.cpp  main.cpp
Source/Engine/: CMakeLists.txt
Source/Engine/include/: core.h
Source/Engine/include/Core/: Application.h  BaseCamera.h  BaseLayer.h  ImGuiLayer.h  Input.h  LayerStack.h  Logger.h  Window.h
Source/Engine/include/Graphics/: GLTypeSize.h  GlHelpers.h  IndexBuffer.h  Renderer.h  Shader.h  Texture.h  Vertex.h  VertexArray.h  VertexBuffer.h  VertexBufferAttribute.h  VertexBufferLayout.h
Source/Engine/include/OS/: FileDialog.h
Source/Engine/source/Core/: Application.cpp  BaseLayer.cpp  ImGuiLayer.cpp  Input.cpp  LayerStack.cpp  Window.cpp
Source/Engine/source/Graphics/: IndexBuffer.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  Vertex.cpp  VertexArray.cpp  VertexBuffer.cpp  VertexBufferLayout.cpp
Source/Game/: CMakeLists.txt  FPSCamera.h  GameLayer.cpp  GameLayer.h  main.cpp
Source/Game/source/: main.cpp
Source/Render/: CMakeLists.txt
Source/Render/include/: FrameBuffer.h  Helpers.h  IndexBuffer.h  KitComponent.h  KitMaterial.h  KitModel.h  KitObject.h  KitScene.h  KitSceneNode.h  KitStaticMesh.h  KitTag.h  KitTexture.h  KitTransform.h  KitVertex.h  Renderer.h  SceneManager.h  Shader.h  Vertex.h  VertexArray.h  VertexBuffer.h  VertexBufferLayout.h
Source/Render/pch/: RenderPch.cpp  RenderPch.h
Source/Render/source/: FrameBuffer.cpp  Helpers.cpp  IndexBuffer.cpp  KitComponent.cpp  KitMaterial.cpp  KitModel.cpp  KitObject.cpp  KitScene.cpp  KitSceneNode.cpp  KitStaticMesh.cpp  KitTag.cpp  KitTexture.cpp  KitTransform.cpp  KitVertex.cpp  SceneManager.cpp  Shader.cpp  Texture.cpp  Vertex.cpp  VertexArray.cpp  VertexBuffer.cpp  VertexBufferLayout.cpp
Source/Utils/ModelLoader/: CMakeLists.txt
Source/Utils/ModelLoader/include/: Loader.h  kitMaterial.h  kitMesh.h  kitTexture.h  kitVertex.h
Source/Utils/ModelLoader/source/: Loader.cpp
(+57 files in other folders)
